src/objects/tls_warning_settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>dateValue__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>urlValue__c</fullName>
        <label>urlValue</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <label>value</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>TLS Warning Settings</label>
</CustomObject>